EBNF_BUNIAC.txt
program
   : statement+
   ;
 
funct
    : identifier+  "(" variable {"," variable} ")" ':'
    |'{'statement '}'   
    ;

statement
   : 'if' paren_expr '{'statement'}'
   | 'if' paren_expr '{'statement'}' 'else' '{'statement'}'
   | 'while' paren_expr '{'statement'}'
   | 'print' paren_expr ';'
   ;

paren_expression
    : '(' expression ')'
    ;  

bools
    : expression '//' expression
    | expression '&&' expression
    | expression '!'  expression
    ;

relats
    : expression '>' expression
    | expression '<' expression
    | expression '=='  expression
    | expression '!='  expression
    ;
  
expression
   :term 
   |term '+' term
   |term '-' term
   ;

term
   : factor '*' factor
   | factor '/' factor
   ;

factor
   : '+' factor
   | '-' factor
   | number
   | '(' expression ')'
   | identifier
   ;

identifier
   : STRING+ [STRING+]
   | STRING+ [INT+]
   | STRING+ ['_']
   ;

variable
    : identifier
    ;

attribution
    : identifier+ ['=' expression]
    ;

number
   : FLOAT
   ;

STRING
   : [a-z]+
   | [A-Z]+
   ;

FLOAT
   : INT+ ['.' INT+]
   ;

INT
   : [0-9]
   ;
